# FaceBot

./: .env  .gitignore  justfile  main.py  pyproject.toml  servo_controller.py
static/: index.css
templates/: base.html.j2  bot.html.j2  client.html.j2  index.html.j2
