[project]
name = "facebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openapi-generator-cli>=7.14.0",
    "pytest>=8.4.1",
    "smbus2>=0.4.2",
]
